--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             padding:0;
             aspect-ratio:4/2.23;
             max-height:90vh;
-            filter:drop-shadow(0 0 20px rgba(0, 0, 0, 0.077)) drop-shadow(0 0 0.2px black);
+            filter:drop-shadow(0 0 20px rgba(0, 0, 0, 0.077));
         }
 
         .section{
@@ -115,8 +115,18 @@
         }
 
         img{
-            width:45%;
+            height:40%;
             mix-blend-mode:multiply;
+        }
+
+        .image-wrapper{
+            display:flex;
+            flex-direction:column;
+            gap:10px;
+            justify-content:center;
+            align-items:center;
+            width:100%;
+            height:90%;
         }
 
         .directory{
@@ -157,6 +167,7 @@
 
         .directory:hover .message{
             transform:translateY(20px);
+            display:flex;
         }
 
         .nav{
@@ -177,7 +188,7 @@
             height:100%;
             width:100%;
             box-sizing:border-box;
-            display:flex;
+            display:none;
             justify-content:space-between;
             padding:10px;
             transition:transform 1s cubic-bezier(.2,0,.08,1);
@@ -272,7 +283,6 @@
         }
 
         $(window)
-        .on('load resize', resetScrollPosition)
         .on('wheel', function (e) {
             e.preventDefault();
 
@@ -317,72 +327,64 @@
                     <p style="margin-bottom:-5px"><i>About this site</i></p><hr>
                     <p>
                         newpoetics.net is the homepage of an ongoing research project in our evolving relationship with language and technology. Right now, it serves as an indepedent study project during RISD's Wintersession semester.
-                        <br>
-                        <br>
+                        <br><br>
                         This page will be regularly updated with research, findings, and writing.
+                        <br><br><br><br>
+                        Ryan Yan
                         <br>
-                        <div style="display:flex; width:100%; flex-direction:row; bottom:0; border:black solid 0.5px; padding:5px; gap:10px;">
-                            <p style="flex-grow:1"><a href="https://ryanyan.ca" target="_blank">Ryan Yan</a>,<br>Graphic Design '25</p>
-                            <p>Rhode Island School of Design<br>Wintersession 2025<br></p>
-                            <p>Advised by Kathy Wu</p>
-                            <br>
-                        </div>
+                        Rhode Island School of Design
+                        <br><br>
+                        Wintersession 2025
+                        <br>
+                        January 3–February 15, 2025
+                        <br>
+                        Advised by Kathy Wu
                         <div style="display:flex; width:100%; flex-direction:row; position:absolute; bottom:0;">
                             <p>Last Updated: December 6, 2024</p>
                         </div>
                     </p>
                 </div>`,
-            3: `<div>
+            3:  `<div>
                     <p style="margin-bottom:-5px"><i>Syllabus</i></p><hr>
                     <p>Through the lens of digital linguistics, this independent study project examines how technology empowers us to use language as a dynamic tool for connection, creativity, and identity formation. In a culture that blurs casual conversation and poetic expression, digital language thrives as a site of linguistic hybridity and mutualistic influence, bending to fit the unique constraints of our digital spaces. As language compresses, abstracts, and shifts in response to algorithms, platforms, and social contexts, how do we make sense of our interactions and expressions? By engaging with early works in computational poetics, internet language studies, and digital ethnographic research, this project is an linguistic anthropological investigation into our relationship with technology, language, and with each other—how this evolving connection is both a catalyst for language’s transformation and, perhaps, a reflection of shifting relationships between people themselves. In a world where typing and text are the primary conduits of connection, how does language bring intimacy within the reach of our fingers, while also revealing the distance that lingers beneath our digital conversations, and between us?</p>
                 </div>`,
-            4: `<div>
-                </div>`,
-            5: `<div>
-                    <img src="images/speak.jpg">
-                </div>`,
-            6:  `<div>
+            4:  `<div>
                     <p style="margin-bottom:-5px"><i>Week 1</i></p><hr>
                     <h1>Intro to Digital Linguistics:<br>Spoken, Printed, Pixelated</h1>
                     <p>This foundational week explores the basics of linguistics—phonetics, syntax, semantics, and pragmatics—and assesses how these tools are equipped (or unprepared) to handle the complexities of digital language. We’ll discuss how digital contexts like hyperlinking, indexing, and ephemeral text impact traditional linguistic concepts, examining how digital language compares with spoken and printed forms. How does digital communication introduce new linguistic qualities and how can we adapt our analytical framework to better interpret the nuances of online language? This week sets the groundwork for understanding digital language’s unique structures and challenges as the foundations of our research for the next few weeks.</p>
                 </div>`,
-            7:  `<div style="width:100%; overflow:none; display:flex; flex-directions:columns; align-content:center">
-                    <img src="images/link.jpg">
-                    <img src="images/tokens.png"">
-                </div>
-                `,
-            8:  `<div>
-                    <p>Week 2</p>
+            5:  `<div>
+                    <p style="margin-bottom:-5px"><i>Week 2</i></p><hr>
                     <h1>Digital Formalities:<br>Nuances, Constraints, and Adaptation</h1>
                     <p>Despite the lack nonverbal cues in digital communications, we have developed various conventions to convey tone, intent, and emotion. This week, we explore how elements like tone indicators, emojis, and typographic treatment of text bring nuance to digital interactions, and how these conventions are shaped by the platform-specific constraints of online spaces. What are the origins of these conventions and how have they seeped into our social frameworks? From character limits to algorithmic censorship, digital constraints compel users to adapt language creatively, using shorthand, abbreviations, and pictographic metaphors to communicate effectively. We’ll examine how these limitations impact meaning and how the tension between brevity and nuance limits, compresses, and ultimately gives life to new linguistic expressions.</p>
                 </div>
                 `,
-            9:  `
-                <div>
-                    <img src="images/wubi.png">
-                </div>
-                `,
-            10:  `<div>
-                    <p>Week 3</p>
+            6:  `<div>
+                    <p style="margin-bottom:-5px"><i>Week 3</i></p><hr>
                     <h1>Text in Time:<br>Memory and Temporality</h1>
                     <p>Copying and pasting pre-written text, editing a post, or correcting a typo—digital text exists in a unique space between impermanence and preservation. This week, we explore how digital tools like cloud storage, notes apps, and social media shape our experience of writing and memory, granting us more agency over how language interacts with time. We’ll analyze how ephemeral practices such as unsending, ghosting, archiving, and temporary posts influence interpersonal relationships and how the persistence of digital footprints impacts privacy, identity, and cultural continuity. How do asynchronous interactions like typing indicators and read receipts shape conversational flow and interpretation? Comparing these digital cues to linguistic features such as turn-taking and back-channeling, we’ll investigate how time and memory reshape engagement and social dynamics in the digital age.</p>
-            </div>
-            `,
-            11:  `<div>
-                    <p>Week 4</p>
+                </div>
+                `,
+            7:  `<div>
+                    <p style="margin-bottom:-5px"><i>Week 4</i></p><hr>
                     <h1>Virtual Identities:<br>Cultural Dissemination, Virality, and Hybridity</h1>
                     <p>As language spreads through the internet, it absorbs new forms and meanings with each share, shift, and viral wave, reshaping itself through the countless voices and trends that carry it forward. This week, we examine how digital spaces act as a cultural melting pot of linguistic hybridity, enabling users to blend identities beyond languages, dialects, and cultural cues, incorporating broader social frameworks that find new accessibility and resonance online. We’ll explore how typing quirks, capitalization styles, and emoji choices function as sociolinguistic markers of belonging and identity, and consider the social weight of digital actions like liking a message or leaving someone on read. What strategies do users employ to navigate platform constraints and algorithmic amplification, and how does the viral spread of language shape collective memory and social norms? We’ll discuss how users leverage platform limitations to foster solidarity and identity within digital communities and consider the role of online constraints in amplifying global movements and reshaping cultural expression.</p>
                 </div>
-            `,
-            12:  `<div>
-                    <p>Week 5</p>
+                `,
+            8:  `<div>
+                    <p style="margin-bottom:-5px"><i>Week 5</i></p><hr>
                     <h1>Cultural Artifacts:<br>Compression, Poetics, and Mutualism</h1>
                     <p>In the final week, we consider the future of language as it transforms into a powerful medium for creativity and cultural exchange. From algorithmic tools like ChatGPT that compress and abstract language, to the rise of digital poetics that allow direct, interactive experiences with language, we’ll explore how digital spaces become vessels for artistic expression. We’ll investigate how large language models flatten complex language, much like the compression of digital images and data, and how this distortion can obscure the cultural nuances and politics embedded in digital text—a medium inherently shaped by the human contexts from which it emerges. We’ll also examine the mutual influence between digital and oral language, looking at how internet conventions shape face-to-face interactions—and vice versa—offering insights into future shifts in human communication. What does this mutualism reveal about language’s adaptability, and how might the digital world redefine our understanding of communication and identity? Finally, we’ll look backward to deconstruct language, uncovering what these computational tools reveal about the essence of human communication and the potential to expand our linguistic canon.</p>
                 </div>
-            `,
+                `,
+            9:  `<div>
+                <p style="margin-bottom:-5px"><i>And onwards..</i></p><hr>
+                <h1>To be typed...</h1>
+                </div>
+                `,
         };
 
-        //generate a unique order
+        //generate a unique order to display content
         function generateOrder(contentCount, offset) {
             const order = [];
             for (let i = 0; i < contentCount; i++) {
@@ -400,14 +402,18 @@
             "bottom-right": generateOrder(contentCount, 1),
         };
 
-        $.each(orders, function (sectionClass, order) {
-            const $section = $(`.${sectionClass}`);
-            $.each(order, function (_, contentId) {
-                const $contentDiv = $('<div>')
-                    .addClass('content')
-                    .html(contents[contentId]);
-                $section.append($contentDiv);
+        //load content into section
+        $(window).on('load', function(){
+            $.each(orders, function (sectionClass, order) {
+                const $section = $(`.${sectionClass}`);
+                $.each(order, function (_, contentId) {
+                    const $contentDiv = $('<div>')
+                        .addClass('content')
+                        .html(contents[contentId]);
+                    $section.append($contentDiv);
+                });
             });
+            resetScrollPosition(); //ensure correct initial position
         });
     </script>
 </body>
