--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Text, Typing, Transcendence</title>
+    <link rel="icon" type="image/x-icon" href="images/load.gif">
     <style>
         @font-face {
             font-family:pantasia;
